# coffeeguard-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: demo_script.md  deployment_checklist.md
scripts/: download_bracol.py  prepare_bracol.py
space_deploy/: README.md  app.py  requirements.txt
space_deploy/src/coffeeguard/: dataset.py  inference.py  report.py  transforms.py
src/coffeeguard/: __init__.py  config.py  evaluate.py  gradcam.py  model.py  train.py  training_data.py
